--- a/Paper.Rmd
+++ b/Paper.Rmd
@@ -3,6 +3,11 @@ title: "Disturbance Assimilation"
 author: "Michael Dietze"
 date: '`r Sys.Date()`'
 output:
+  pdf_document: 
+    fig_caption: yes
+    number_sections: yes
+    toc: yes
+    keep_tex: true
   html_document: 
     fig_caption: yes
     number_sections: yes
