--- a/SingleSite_MultiDisturb_MultiPool.Rmd
+++ b/SingleSite_MultiDisturb_MultiPool.Rmd
@@ -23,7 +23,7 @@ source("disturbance.R")
 ## SET-UP
 
 ```{r}
-ne = 200     ## number of ensemble members
+ne = 500     ## number of ensemble members
 NT = 25      ## number of years
 nt = 365*NT
 time = 1:nt
@@ -75,7 +75,7 @@ THETA <- as.matrix(Theta[par,]) ## ensemble parameters
 ## disturbance
 mu0 <- matrix(c(0.1,0.1,
                 0.1,0.95),2,2)    ## mean leaf & stem biomass after disturbance as % of original
-V1  <- diag(c(0.15,0.25))^2       ## var in post disturbance leaf and stem biomass (one for each type)
+V1  <- diag(c(0.15,0.15))^2       ## var in post disturbance leaf and stem biomass (one for each type)
 V2  <- diag(c(0.15,0.01))^2
 V0  <- abind::abind(V1,V2,along=3)       ## combine covs
 alloc.soil = 0.25        ## fraction of removed C that goes in the soil
@@ -89,7 +89,7 @@ Nmu = NmuK = NfK = Nf = Na*NA
 ## pseudodata
 No = matrix(NA,NT,3)                   ## storage for observed state
 Ntrue = matrix(NA,NT,3)                ## storage for latent "true" state
-true = 42                              ## reference ensemble member
+true = 43                              ## reference ensemble member
 D.true = rep(0,NT)                     ## true disturbance timeseries
 D.true[10] = 1                         ## prescribe a disturbance
 refpar = as.numeric(Theta[par[true],]) ## grab the "true" parameters
@@ -171,18 +171,25 @@ for(t in 1:NT){
   Nf <- tobit(Nf)
 
   ## priors
-  priors <- list(p   = rowMeans(d.prior),         ## disturbance rate
+  priors <- list(p   = p.dist, #rowMeans(d.prior),         ## disturbance rate
                  muf = muf,    ## forecast means
                  pf  = pf      ## forecast precision
   )
   Forecast[[t]] <- c(list(d.prior=d.prior,Nf=Nf),priors)
   
+  ## initial conditions: disturbance likelihood
+  Lp = NA
+  for(i in 1:3){ Lp[i] = mvtnorm::dmvnorm(No[t,],muf[,i],pf[,,i])}
+  rho.IC = rep(0,3); rho.IC[which.max(Lp)] = 1; rho.IC[1] = NA
+  
   ## Analysis
   update = c(list(Y=No[t,],R=solve(R),N=3),priors)
   mod <- rjags::jags.model(file=textConnection(AnalysisSSMDMP),
                            data=update,
-                           n.adapt=1000,n.chains=3)
-  jdat <- rjags::coda.samples(mod,n.iter=2000) ## burn-in 
+                           inits = list(rho=rho.IC),
+                           n.adapt=3000,n.chains=3)
+  jdat <- rjags::coda.samples(mod,variable.names = "rho",n.iter=2000) ## burn-in 
+  plot(jdat)
   jdat <- rjags::coda.samples(mod,variable.names=c("X","rho","x"),n.iter=10000) 
   
   ## update parameters & save Analysis posterior
@@ -212,6 +219,10 @@ for(t in 1:NT){
                         Ca = Ca)
 }
 
+```
+
+```{r}
+save(Forecast,Analysis,No,Ntrue,R,file="exp3.RData")
 ```
 
 
