--- a/methods.Rmd
+++ b/methods.Rmd
@@ -106,54 +106,62 @@ Having tested the Multinomial assimilation against simulated data we next applie
 
 ### Study region and data sources
 
-Our study region was a Landsat tile located between 120 47'W and 123 7'W longitude and 43 45'N and 45 '4'N latitude. For this tile we extracted data from three derived Landtrendr datasets (http://emapr.ceoas.oregonstate.edu/pages/data/viz/index.html, tile h03v04):  biomass, cover, and disturbance. All three products were 30m resolution and annual timestep;biomass and cover extended from 1990-2017, while disturbance extended from 1984-2011 and a nearest neighbor algorithm was used to regrid the disturbance data to be the same as biomass and cover. The biomass product ... [@Kennedy2018]. The cover product ... [CITE]. To similify the analysis we focused on a single vegetation type, evergreen forest, which is the dominant vegetation cover in the region and consists primarily of ponderosa pine. The disturbance product ... [CITE]. To simplify analyses we aggregated the disturbance product into five classes: undisturbed, cut, fire, pest, and other.
+Our study region was a Landsat tile over central Oregon, USA located between 120 47'W and 123 7'W longitude and 43 45'N and 45 '4'N latitude. For this tile we extracted data from three derived Landtrendr datasets (http://emapr.ceoas.oregonstate.edu/pages/data/viz/index.html, tile h03v04):  biomass, cover, and disturbance. All three products were 30m resolution and annual timestep;biomass and cover extended from 1990-2017, while disturbance extended from 1984-2011 and a nearest neighbor algorithm was used to regrid the disturbance data to be the same as biomass and cover. The biomass product calibrated Landtrendr-processed Landsat data against field plot data using the gradient nearest neighbor (GNN) methodology to produce an annual biomass estimates [@Kennedy2018]. The cover product trained a spatiotemporal exploratory model (STEM), which uses an ensemble of regression trees defined within spatially overlapping support sets, against the 2001 U.S. National Land Cover Database (NLCD) to produce annual land-cover maps for Washington, Oregon, and California [@HOOPER2018]. To similify the analysis we focused on a single vegetation type, evergreen forest, which is the dominant vegetation cover in the region and consists primarily of Ponderosa pine (_Pinus ponderosa_). The disturbance product **need text and citation from Robert** [CITE]. To simplify analyses we aggregated the disturbance product into five classes: undisturbed, cut, fire, pest, and other.
 
 ```{r map, echo=FALSE}
 ## maps of pre-disturbance biomass, cover, and 2004 disturbance
 
+## Cover
+if(!exists("cov04")) cov04 = raster::raster("cov04.tif")
+load("rat.RData")
+raster::plot(cov04,col=rat$color,axis.args=list(at=seq_along(rat$description),labels=rat$description,cex.axis=0.4),asp=1,main="Land Cover")
+
+## Disturbance
+if(!exists("dis04")) dis04 = raster::raster("dis04.tif")
+dname = c("Intact","Other","Cut","Fire","Pest")
+raster::plot(dis04,col=c("#ebebeb",'#b04c00','#1f78b4','#faabaa','#b2df8a'),axis.args=list(at=seq(3,48,length=5),labels=dname,cex.axis=0.4),asp=1,main="Disturbance") #"#a6cee3" '#33a02c'
+
+## Biomass
+if(!exists("bio04")) bio04 = raster::raster("bio04.tif")
+raster::plot(bio04,col=c('#ffffff','#edf8fb','#ccece6','#99d8c9','#66c2a4','#2ca25f','#006d2c'),asp=1,main="Biomass")
+
 ```
-
-
- + Applications: PNW
-    + Logging
-    + Fire
-    + Land use transition (forest -> non?)
-
 
 ### Construction of disturbance frequency and transition matrix priors
 
-* recoded to a smaller set of disturbances: none, fire, pest, clearcut, other
-* Calculate frequencies of different disturbance types
-* Calculate disturbance-by-landCover matrix of transition probabilities
-* Use these as disturbance priors
+Our Multinomial disturbance assimilation model takes as priors the disturbance probability and the post-disturbance pool sizes (mean and precision). The algorithm also allows the user to specify a transition matrix for pre- and post-disturbance changes in vegetation type. For some ecosystem models, these quantities may be generated dynamically by the model itself as part of the ensemble forecast. Because VSEM does not internally predict disturbances we instead generated these priors using the Landtrendr disturbance product. The disturbance probability prior was calculated simply as the frequency of each disturbance type over the whole time period and the subset of spatial domain that was classified as evergreen forest. The post-disturbance pool size and transition matrix priors were similarly estimated using the remotely sensed biomass and cover estimates (respectively), this time focusing on a sample of 100 disturbance transitions per year for the years 1990-2003 because of the greater computational cost of this estimation process. Because of the potential lags involved in when a disturbance occurred within a year, we considered an evergreen forest disturbance to be a disturbed pixel that was evergreen forest in the year of disturbance or the prior year. Similarly, we considered the pixel to transition out of forest if the cover type in the year of disturbance or the year following disturbance to be non-forest, but filtered out disturbances where that transition only lasted one year before returning to forest (i.e. these were considered forest-to-forest transitions in the matrix, as were pixels that stayed forest the whole time). Similarly, in order to assess the change in biomass associated with disturbance we calculated the maximum biomass in the three years prior to disturbance and the minimum biomass in either the year of the disturbance or the two years after. For all disturbance types we calculated the mean and standard deviation of the change in biomass both in absolute terms and as a proportional change.
 
 ### Calibration of VSEM
 
-VSEM was calibrated primarily using data from 2002-2019 from the Ameriflux site US-ME2 (lat.lon), a mature Ponderosa pine stand. VSEM pools (leaf, stem, and soil C) were initialized using the earliest available site-specific data from the Ameriflux BADM (Biomass, Ancillary, Disturbance, Management) dataset.
+VSEM was calibrated primarily using data from 2002-2019 from the Ameriflux site US-ME2 (lat.lon), a mature Ponderosa pine stand. VSEM pools (leaf, wood, and soil C) were initialized using the earliest available site-specific data from the Ameriflux BADM (Biomass, Ancillary, Disturbance, Management) dataset. An additional ten years of leaf and wood biomass data were also available from the BADM, which we included as part of the calibration dataset. Also included was the cumulative annual tower NEE (2002-2019). Because we were working with annual data we assumed Normal likelihoods for all three response variables, and because our priority was the correct prediction of aboveground biomass we upweighted the wood likelihood by 4 and downweighted the NEE likelihood by 1/4. 
 
-[@BayesianTools]
+Prior to calibration we set the leaf area ratio (LAR) to 15.7 m2/kgC and leaf residence time (tauL) to 4.7 years based on data from the BADM and left the light extinction coefficient (KEXT) at its default (0.5). The remaining fit parameters were the light use efficiency (LUE), the fraction of GPP allocated to autotrophic respiration (GAMMA), the fraction of NPP allocated to leaves (Av), the wood and soil C residence times (tauW, tauS), and the residual standard deviations for each of our data constraints (sd_NEE, sd_leaf, sd_wood). The fit was done taking a Maximum Likelihood approach using base R's `optim` function. Finally, because the process error within a dynamical data assimilation system is not identical to the calibration residual error, we estimated the leaf and wood process errors (Ql, Qw) based on the difference between the predicted and observed net annual changes in each of these pools. Because there was not an equivalent annually-observed soil carbon dataset, the soil carbon process error (Qs) was estimated based on the predicted mean annual rate of change under the simplifying assumption that the true soil carbon is in steady-state.
 
-* Calibrate at US-Me2, 2002-2019 
-* Priors (and some fixed parameters) using BADM; default uniform for rest
-* Likelihood against tower _annual_ NEE and BADM leaf and stem biomass
-* MCMC using DEzs algorithm for 25000 iterations of 2 chains
-* GBR, effective sample
+```{r paramTable,echo=FALSE}
+load("fit.RData")
+varName = c(names(theta),"Ql","Qw","Qs")
+varName[c(5,7)] = c("tauL","tauW")
+paramTable = data.frame(varName,fit=format(c(theta,Ql,Qw,Qs),digits=3,scientific=TRUE))
+knitr::kable(paramTable, caption = "VSEM parameter estimates")
+```
 
-### Comparison to real-world data
+### Assimilation of remotely-sensed data
 
-Extract some example time series for single pixels (e.g. AGB product) where the disturbance (2004) it is far enough in the past that there’s an interesting recovery trajectory but also where it’s not so early (so that the data assimilation has time to come into steady-state before the disturbance).
+To assess the performance of the Multinomial assimilation algorithm against real-world data, we sampled ~100 evergreen forest points for each disturbance class. We specifically sampled disturbance locations from the year 2004, which is sufficiently deep in the past that there is an observable disturbance recovery trajectory, but with a sufficiently long time-series prior to disturbance for the data assimilation to come into steady-state with the biomass data product. For each selected location we extracted a time-series from the remotely-sensed biomass product for use as the data constraint within the assimilation algorithm. The cover and disturbance products were not assimilated, but were just used to construct priors (see above) and assess performance.
 
-* Selected conifer forest land cover type
-* Sampled ~100 points from each disturbance type for 2004
-* Daymet PAR as driver
-* IC
-  * ensemble spin up
-  * construct disturbance recovery trajectory
-  * Extract rs map AGB
-  * Match leaf and soil C from spin-up trajectory
+For each location we next extracted PAR driver data from the Daymet product [CITE] using the daymetr R package [@daymetr]. For each location the carbon pools were initialized using a multi-step process to account for the lack of leaf and soil C data at a landscape scale. To start we used the first time point in each biomass time-series as the initial condition for the wood pool. Next, using the US-ME2 initial conditions we performed a >10k year spin-up, and then sampled carbon pool ensemble members from the second half of this time-series. Next, for each ensemble member we imposed at disturbance that reduced wood and leaf biomass to 1% of their equilibrum values, then simulated a 200-year recovery trajectory. Finally, for each ensemble member we selected the stand age that minimized the squared error between the modeled biomass and the initial biomass, and then selected the leaf and soil C pools at that stand age. This results is an ensemble of leaf, wood, and soil carbon pools with a covariance structure that is consistent with the calibrated model's dynamics.
 
-* Experiments
-  * run SSSDMP model for each site independently
-  * run other versions varying R, Q, and the disturbance probability
+For the assimilation experiment, each site was assimilated separately. In the initial round of experiments the observation error variance was set to $26.5\: kg^2/m^2$ based on [@Kennedy2018] Figure 2. Post-assimilation, we then extracted a number of metrics to assess algorithm performance: the posterior probability of disturbance in 2004, the posterior biomass pool size before disturbance, after disturbance, and at the end of the time-series (2017). The difference between the predicted and observed biomass at the end of the assimilation was taken as a metric of filter divergence, the situation where the model in a data assimilation algorithm becomes so confident in itself that assimilated observations have little impact on the posterior, which then diverges from observations. **ONCE RESULTS ARE FINALIZED, COME BACK AND FILL IN WHICH SPECIFIC ANALYSES WERE USED**. 
+
+Finally, based on preliminary results we performed a series of additional assimilation experiments where we manually altered the observation error, R, or process error, Q, to assess the sensitivity of our results. Table (\@ref(table:QRexp)) lists the multipliers that were used to adjust R and Q. The skill of these assimilation experiments were assessed the same as the original. In addition, changes in skill across experiments were assessed as a function of R and Q.
+
+```{r QRexp,echo=FALSE}
+## summary table of experiments
+load("QRexp.RData")
+QRexp = data.frame(experiment=1:6,Qmult=Qmult[Qs],Rmult=Rmult[Rs])
+knitr::kable(QRexp,caption="Data Assimilation experiments")
+```
+
   * Score: filter divergence, disturbance detection & skill
   * Regress vs: pre-disturbance biomass, size of disturbance (abs & rel), type, etc
+
